[package]
name = "grove_bms"
version = "0.1.0"
edition = "2021"
authors = ["groveeee <asynchronized@yeah.net>"]



[dependencies]
actix-rt = "2.10.0"
actix-web = "4.8.0"
serde = "1.0.203"
serde_json = "1.0.120"
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.14"
env_logger = "0.11.3"
dotenv = "0.15.0"
lazy_static = "1.5.0"
jsonwebtoken = "9.3.0"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono", "uuid", "bigdecimal", "json", "ipnetwork"] }
